--- a/src/ui/CharSheetPage/commonBlocks/AttributeSection/AttributeSection.css
+++ b/src/ui/CharSheetPage/commonBlocks/AttributeSection/AttributeSection.css
@@ -5,13 +5,16 @@
 
 .stat-container-label, .stat-container-input {
   margin-bottom: 0;
-  flex-basis: 8.5rem;
+  /* flex-basis: 8.5rem; */
   /* -webkit-box-flex: 0;
   -ms-flex-positive: 0; */
-  flex-grow: 0;
+  /* flex-grow: 0; */
   /* -ms-flex-negative: 0; */
-  flex-shrink: 0;
+  /* flex-shrink: 0; */
   display: block;
   /* word-break: break-all; */
   font-size: 0.875rem;
+  flex: 1 1 0%;
+  min-width: 8rem;
+  white-space: nowrap;
 }
